# cmake-sfml-demo

./: CMakeLists.txt
.github/workflows/: ci.yml
src/: main.cpp
